make responsive image carousel and fix nav bar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@
   --spacing-lg: 1.5rem;
   --spacing-xl: 2rem;
 
+  --screen-ssm: 480px;
   --screen-sm: 640px;
   --screen-md: 768px;
   --screen-lg: 1024px;
